# Yet-Another-Vulkan-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_shaders.sh  toolchain.cmake
shaders/: shader.vert
src/: application.cpp  application.hpp  main.cpp  yave_graphics_pipeline.cpp  yave_graphics_pipeline.hpp  yave_vulkan_instance.cpp  yave_vulkan_instance.hpp  yave_vulkan_surface.cpp  yave_vulkan_surface.hpp  yave_window.cpp  yave_window.hpp
